# banking

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs  model.rs  routing.rs
tests/: functional.rs
