[package]
name = "banking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "serde"]}
serde = "1.0.197"

[dev-dependencies]
rstest = "0.18.2"
assert2 = "0.3.14"
